--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Contact Us</h2>
-                        <p class="mb-0">We are located in Kansas City, Missouri we offer all services to those in the area. If you are not in the area and we are able to provide a sutible level of support remotely contact us and we can discuss options.</p>
+                        <p class="mb-0">We are located in Kansas City, Missouri we offer all services to those in the area. If you are not in the area and we are able to provide a suitable level of support remotely contact us and we can discuss options.</p>
                         &nbsp;
                         <p class="mb-0">Email:</p>
                         <p class="h4">contact@horseytech.com</p>    
