--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
                         <h2>Technical Services</h2>
-                        <p class="mb-0">Video Surveillance Installation, Cyber Security, Network Design, WiFi Coverage and Speed Improvement, A/V System Design, Website Development and Design, Application Support, Documentation, Electronics Repair and more.</p>
+                        <p class="mb-0">Information Technology (IT), Information Security (InfoSec), Video Surveillance Installation, Access Control Installation, A/V System Design, Application Support, Documentation Website Development/Design, Electronics Repair and more.</p>
                     </div>
                 </div>
                 <br>
