--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         
         <!-- Footer-->
         <footer class="py-5 bg-dark">
+            <div class="container"><h3 class="m-0 text-center text-white"><a href="https://anydesk.com/download">Remote Support</a></h3></div>   
+            <br>
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Horsey Tech</p></div>
         </footer>
         <!-- Bootstrap core JS-->
