Changed Remote Support Link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><h3 class="m-0 text-center text-white"><a href="https://anydesk.com/download">Remote Support</a></h3></div>   
+            <div class="container"><h3 class="m-0 text-center text-white"><a href="https://horseytech.screenconnect.com/">Remote Support</a></h3></div>   
             <br>
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Horsey Tech</p></div>
         </footer>
