Added resources page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                         <p class="mb-0">Event Audio, Event Livestreaming, Video Editing, Image Editing, Social Media Consulting and more.</p>
                     </div>
                 </div>
+                <br>
+                <div class="row justify-content-center">
+                    <div class="col-lg-6">
+                        <h2>Free Resources</h2>
+                        <p class="mb-0">Checklists and Templates</p>
+                        <a href="resources.html">Click Here to View</a>
+                    </div>
+                </div>
             </div>
         </section>
 
