--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L89LM036PW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L89LM036PW');
+</script>
     <body>
         <!-- Header - set the background image for the header in the line below 1600x900-->
         <header class="py-5 bg-image-full" style="background-image: url(assets/Header\ Background.png)">
