--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p class="mb-0">We are located in Kansas City, Missouri we offer all services to those in the area. If you are not in the area and we are able to provide a suitable level of support remotely contact us and we can discuss options.</p>
                         &nbsp;
                         <p class="mb-0">Email:</p>
-                        <p class="h4">contact@horseytech.com</p>    
+                        <p class="h4">info@horseytech.com</p>    
                     </div>
                 </div>
             </div>
