--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <footer class="py-5 bg-dark">
             <div class="container"><h3 class="m-0 text-center text-white"><a href="https://horseytech.screenconnect.com/">Remote Support</a></h3></div>   
             <br>
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Horsey Tech</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Horsey Tech 2021 - 2025</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
