--- a/resources.html
+++ b/resources.html
@@ -47,7 +47,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Horsey Tech</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Horsey Tech</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
