--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3>Welcome to Horsey Tech</h3>
             <!--<img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">-->
-            <p>Horsey Tech is a Kansas City Missouri multimedia and consulting company! We love implementing technology to make your business more secure and run as efficiently as possible. We believe that technology should help you and not be a burden, that's where we come in to get everything up and running to help make your business be as efficient as possible without you needing to worry about the technology.</p>
+            <p>Horsey Tech is a Kansas City Missouri multimedia and consulting company! We love implementing technology to make your business more secure and run as efficiently as possible. We believe that technology should help you and not be a burden, that's where we come in to get everything up and running to help make your business as efficient as possible without you needing to worry about the technology.</p>
             <!--<p>Temporibus nihil enim deserunt sed ea. Provident sit expedita aut cupiditate nihil vitae quo officia vel. Blanditiis eligendi possimus et in cum. Quidem eos ut sint rem veniam qui. Ut ut repellendus nobis tempore doloribus debitis explicabo similique sit. Accusantium sed ut omnis beatae neque deleniti repellendus.</p>-->
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="250">
